--- a/base.css
+++ b/base.css
@@ -1,7 +1,12 @@
 @charset "utf-8";
 
 html {
-    background-color: rgb(238, 136, 20);
+    background-image: ;
     font-size: 1.3px;
     font-family: 'Courier New', Courier, monospace;
+}
+
+body {
+    margin-left: auto;
+    margin-right: auto;
 }
