--- a/base.css
+++ b/base.css
@@ -11,7 +11,8 @@ html {
 body {
     margin-left: 150px;
     margin-right: 150px;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0.781), rgba(233, 118, 41, 0.65))
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.781), rgba(233, 118, 41, 0.65));
+    min-height: 22em;
 }
 
 /* This sets up the aviaton maintenance picture to fit the size of the nav bar */
@@ -67,5 +68,14 @@ li a {
 
 /* This sets up color in the footer */
 footer {
-    background-color: rgb(0, 0, 0, .781)
+    background-color: rgb(0, 0, 0, .781);
+    text-align: center;
+    color: white;
+    position: relative;
+}
+
+footer::after {
+    clear: both;
+    content: "";
+    display: table;
 }
