--- a/base.css
+++ b/base.css
@@ -66,6 +66,13 @@ li a {
 }
 
 /* This sets up color in the footer */
+
 footer {
-    background-color: rgb(0, 0, 0, .781)
+    margin-top: 20px;
+    padding: 2px 20px;
+    text-align: center;
+    background-color: rgb(0, 0, 0, .781);
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    letter-spacing: 5px;
 }
