--- a/about.css
+++ b/about.css
@@ -5,3 +5,41 @@ h1 {
     text-align: center;
     font-size: 60px;
 }
+
+article {
+    position: relative;
+    top: 5em;
+    right: 6em;
+    float: left;
+    width: 70%;
+}
+
+article h1 {
+    display: block;
+    margin: 0em 2em 0em 2em;
+}
+
+article p {
+    margin: 1em 2em 0em 2em;
+    display: block;
+}
+
+aside {
+    float: right;
+    background-color: rgba(0, 0, 0, 0.781);
+    color: white;
+    width: 30%;
+    position: relative;
+    bottom: 9em;
+    display: block;
+}
+
+aside h2 {
+    /* color: rgb(226, 127, 35); */
+    font-size: 1.2em;
+    margin-left: 3px;
+}
+
+aside p {
+    margin-left: 15px;
+}
