--- a/theme.css
+++ b/theme.css
@@ -1,14 +1,14 @@
-.w3-theme-d2 {
+.theme-d2 {
     color: #fff !important;
     background-color: #000000 !important
 }
 
-.w3-theme-l1 {
+.theme-l1 {
     color: #fff !important;
     background-color: #333333 !important
 }
 
-.w3-theme-d1 {
+.theme-d1 {
     color: #fff !important;
     background-color: #000000 !important
 }
