--- a/theme.css
+++ b/theme.css
@@ -8,7 +8,7 @@
     background-color: #333333 !important
 }
 
-.theme-d1 {
+.theme-l2 {
     color: #fff !important;
-    background-color: #000000 !important
+    background-color: #33333334 !important
 }
