--- a/icon.css
+++ b/icon.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
+/* this is a link that lets us use these character codes */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 
+/* these are all of the special charcodes that are used like the different social medias, the house, the nav icon, the location icon, the phone and email icons  */
 .fa-instagram:before {
     content: "\f16d";
 }
@@ -45,6 +47,7 @@
     content: "\f139"
 }
 
+/* these are styles for all of the charcodes for display and to smooth it out and make sure that it is the right color and size */
 .fa {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
