--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,4 @@
+/* this is all of themes used for the backgrounds of each section and the text color that is the text color is not chaged else where it will still be visable */
 .theme-d2 {
     color: #fff !important;
     background-color: #000000 !important
