--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
     box-sizing: border-box;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    scroll-behavior: smooth;
 }
 
 /* This makes all elements and before and after these elements have border-box because 
